add option index